Added dtoses Modified responces Passed a little refactoring
