# docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Chat"
+                            "$ref": "#/definitions/dtos.CreateChatDto"
                         }
                     }
                 ],
@@ -172,7 +172,7 @@
                         "name": "message",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/model.ChatMessage"
+                            "$ref": "#/definitions/dtos.CreateChatMessageDto"
                         }
                     }
                 ],
@@ -262,11 +262,11 @@
                 "parameters": [
                     {
                         "description": "User",
-                        "name": "username",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/dtos.ModifyUserDto"
                         }
                     }
                 ],
@@ -298,7 +298,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/dtos.CreateUserDto"
                         }
                     }
                 ],
@@ -375,44 +375,40 @@
         }
     },
     "definitions": {
-        "model.Chat": {
+        "dtos.CreateChatDto": {
             "type": "object",
             "properties": {
-                "createdTime": {
-                    "type": "string"
-                },
-                "id": {
+                "user1_id": {
                     "type": "integer"
                 },
-                "user1Id": {
-                    "type": "integer"
-                },
-                "user2Id": {
+                "user2_id": {
                     "type": "integer"
                 }
             }
         },
-        "model.ChatMessage": {
+        "dtos.CreateChatMessageDto": {
             "type": "object",
             "properties": {
-                "chatid": {
-                    "type": "integer"
-                },
-                "createdtime": {
-                    "type": "string"
-                },
-                "id": {
+                "chat": {
                     "type": "integer"
                 },
                 "text": {
                     "type": "string"
                 },
-                "userid": {
+                "user": {
                     "type": "integer"
                 }
             }
         },
-        "model.User": {
+        "dtos.CreateUserDto": {
+            "type": "object",
+            "properties": {
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.ModifyUserDto": {
             "type": "object",
             "properties": {
                 "id": {
